--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation "androidx.paging:paging-runtime:3.2.0-alpha04"
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation(project(":animals"))
 
