--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,24 +1,21 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
-    id 'kotlin-parcelize'
 }
 
 android {
-    namespace 'com.imams.animalia'
+    namespace 'com.imams.core'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.imams.animalia"
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -35,9 +32,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    buildFeatures {
-        viewBinding = true
-    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -48,30 +42,26 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation "androidx.fragment:fragment-ktx:1.5.6"
 
     // Dagger Hilt
     implementation "com.google.dagger:hilt-android:$version_hilt"
     kapt "com.google.dagger:hilt-compiler:$version_hilt"
 
-    // Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_coroutine"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_coroutine"
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_kotlin_coroutine_adapter"
 
-    // Coroutine helper for UI/VM layer
-    implementation "androidx.activity:activity-ktx:1.7.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$version_lifecycle"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$version_lifecycle"
+    // OkHttp
+    implementation "com.squareup.okhttp3:okhttp:$version_logging_interceptor"
+    implementation "com.squareup.okhttp3:logging-interceptor:$version_logging_interceptor"
 
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.paging:paging-runtime:3.2.0-alpha04"
-    implementation 'com.facebook.shimmer:shimmer:0.5.0'
-
-    implementation(project(":animals"))
+    // Checker interceptor
+    debugImplementation "com.github.chuckerteam.chucker:library:$version_chucker"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:$version_chucker"
 
 }
